--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="col s3">
-      <img width="100%" src="../assets/chef.jpg" alt="">
+      <img width="100%" src="./assets/chef.jpg" alt="">
     </div>
   </div>
 </div>
