--- a/src/app/seguridad/login/login.component.css
+++ b/src/app/seguridad/login/login.component.css
@@ -2,3 +2,25 @@
   border-bottom: 1px solid #F44336;
   box-shadow: 0 1px 0 0 #F44336;
 }
+
+
+/* ==========  Select Field Variables ========== */
+/* ==========  Select Field ========== */
+/* Style Select Field */
+select {
+  font-family: inherit;
+  background-color: transparent;
+  width: 100%;
+  padding: 4px 0;
+  font-size: 16px;
+  /*color: rgba(0,0,0, 0.26);*/
+  border: none;
+  border-bottom: 1px solid rgba(0,0,0, 0.12);
+  display: block;
+  height: 2.6rem;
+}
+
+/* Remove focus */
+select:focus {
+  outline: none;
+}
