--- a/src/app/survey/answer/answer.component.html
+++ b/src/app/survey/answer/answer.component.html
@@ -10,7 +10,7 @@
         <a [routerLink]="['/']" class="btn btn-default">Terminar</a>
       </div>
       <div class="col s3">
-        <img width="100%" src="../assets/chef.jpg" alt="">
+        <img width="100%" src="./assets/chef.jpg" alt="">
       </div>
     </div>
   </div>
