--- a/src/app/survey/survey/survey.component.html
+++ b/src/app/survey/survey/survey.component.html
@@ -17,13 +17,13 @@
           <h4>Regular</h4>
         </div>
         <div class="center col s4">
-          <a [routerLink]="['/answer', idInvoice,'M']"><i class="material-icons large icon-red">sentiment_dissatisfied</i></a>
+          <a [routerLink]="['/answer', idInvoice,'M']"><i class="material-icons large icon-red">sentiment_very_dissatisfied</i></a>
           <br>
           <h4>Malo</h4>
         </div>
       </div>
       <div class="col s3">
-        <img width="100%" src="../assets/chef.jpg" alt="">
+        <img width="100%" src="./assets/chef.jpg" alt="">
       </div>
     </div>
   </div>
