--- a/src/app/seguridad/login/login.component.html
+++ b/src/app/seguridad/login/login.component.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col s1"></div>
     <div class="col s10">
-      <img width="100%" src="../assets/portada.png" alt="">
+      <img width="100%" src="./assets/portada.png" alt="">
     </div>
     <div class="col s1"></div>
   </div>
@@ -33,15 +33,18 @@
               <input [(ngModel)]="usuario.password" name="password" id="password" type="password" class="validate" ngControl="password" required>
               <label for="password">Clave</label>
             </div>
-            <div class="input-field col s3">
-              <i class="material-icons prefix">store</i>
-              <select [(ngModel)]='selected' #selec="ngModel" id="tienda" name="tienda" materialize="material_select" required>
+            <div class=" col s3">
+
+              <label for="tienda">Restaurante</label>
+              <!--select [(ngModel)]='selected' #selec="ngModel" id="tienda" name="tienda" materialize="material_select" required-->
+              <select [(ngModel)]='selected' #selec="ngModel" id="tienda" name="tienda" required>
                 <option disabled>Seleccione</option>
                 <option *ngFor="let red of tiendas" value= {{red.id}}>{{[red.description]}}</option>
               </select>
-              <label for="tienda">Restaurante</label>
+
             </div>
             <div class="input-field col s3">
+
               <button [disabled]="f.invalid && selec.value != ''" class="btn waves-effect waves-light brown darken-2" type="submit" name="action">Ingresar
                 <i class="material-icons right">send</i>
               </button>
